syntax = "proto3";

option csharp_namespace = "Tasks.TaskService.Contracts";

package tasks;

import "google/protobuf/timestamp.proto";

enum TaskState {
  STATE_NONE = 0;
  STATE_PLANNED = 1;
  STATE_RUNNING = 2;
  STATE_COMPLETED = 3;
  STATE_CANCELLED = 4;
}

enum TaskType {
  TYPE_NONE = 0;
  TYPE_TECHNICAL_INSPECTION = 1;
  TYPE_REFUELING = 2;
  TYPE_CLEANING = 3;
  TYPE_REPAIR = 4;
  TYPE_LOADING = 5;
}

message Task {
  int64 task_id = 1;
  int64 flight_id = 2;
  int64 plane_number = 3;
  TaskType type = 4;
  TaskState state = 5;
  string executor = 6;
  google.protobuf.Timestamp start_time = 7;
}

message CreateTaskRequest {
  int64 flight_id = 1;
  int64 plane_number = 2;
  TaskType type = 3;
  string executor = 4;
  google.protobuf.Timestamp start_time = 5;
}

message CreateTaskResponse {
}

message UpdateTaskStateRequest {
  int64 task_id = 1;
  TaskState new_state = 2;
}

message UpdateTaskStateResponse {
}

message GetTasksRequest {
  int32 page_size = 1;
  int32 cursor = 2;
  repeated int64 ids = 3;
}

message GetTasksResponse {
  repeated Task tasks = 1;
}

service TaskService {
  rpc CreateTask (CreateTaskRequest) returns (CreateTaskResponse);
  rpc UpdateTaskState (UpdateTaskStateRequest) returns (UpdateTaskStateResponse);
  rpc GetTasks (GetTasksRequest) returns (GetTasksResponse);
}
